# slambook2

./: README.md
ch2/src/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp
ch3/useEigen/src/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/src/: CMakeLists.txt  useGeometry.cpp
ch4/src/: CMakeLists.txt  useSophus.cpp
ch6/ceresCurveFitting/src/: CMakeLists.txt  ceresCurveFitting.cpp
ch6/gaussNewton/src/: CMakeLists.txt  gaussNewton.cpp
